# podcastfy-generator-openclaw-skill

./: .gitignore  README.md  SKILL.md  pyproject.toml
config/: conversation.yaml
data/transcripts/: transcript_2d7b70c330c44e4ca5a3e95557690884.txt
scripts/: generate.py  install.sh
scripts/tts_providers/: sherpa_onnx.py
